--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.1",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^4.20.7",
     "cors": "^2.8.5",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.4",
